--- a/assets/index.html
+++ b/assets/index.html
@@ -3,46 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="wrap">
-    <header> 
+    <div class="container">
         <h1 class="header-title">ToDo List</h1>
-    </header>
-    <main>
         <div class="container">
-            <div class="add-task">
-                <input type="text" placeholder="Введите задачу">
-                <button>Добавить</button>
+            <div class="input-container">
+                <input id="taskInput" type="text" placeholder="Введите задачу">
+                <button id="addTaskBtn">Добавить</button>
             </div>
-
-
-            <div class="list">
-                <ul>
+                <ul id="taskList">
+                    <!-- <li class="list-item"></li>
                     <li class="list-item"></li>
-                    <li class="list-item"></li>
-                    <li class="list-item"></li>
+                    <li class="list-item"></li> -->
                 </ul>
-
-
-                <div class="task">
-                    <input type="checkbox">
-                    <span>Купить хлеб</span>
-                    <button>Удалить</button>
-                </div>
-                <div class="task">
-                    <input type="checkbox">
-                    <span>Купить молоко</span>
-                    <button>Удалить</button>
-                </div>
-                <div class="task">
-                    <input type="checkbox">
-                    <span>Купить масло</span>
-                    <button>Удалить</button>
-                </div>
-            </div>
         </div>
     </div>       
  <script src="./script/index.js"></script>   
